@@ -1,3 +1,7 @@
+? - ?
+* New bindings :
+  * gettid
+
 0.1.0 - 8 Oct 2013
 * statvfs: add f_flags - decoded f_flag field
 * New bindings :
